<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:checkableBehavior="single">
    <group
        android:id="@+id/nav_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_offline_manager"
            android:icon="@mipmap/ic_file_download_black_24dp"
            android:title="@string/nav_offline_manager" />
    </group>
    <group
        android:id="@+id/nav_group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorites"
            android:icon="@mipmap/ic_star_black_24dp"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/nav_histories"
            android:icon="@mipmap/ic_history_black_24dp"
            android:title="@string/nav_histories" />
        <item
            android:id="@+id/nav_following"
            android:icon="@mipmap/ic_people_black_24dp"
            android:title="@string/nav_following" />
        <item
            android:id="@+id/nav_pay"
            android:icon="@mipmap/ic_account_balance_wallet_black_24dp"
            android:title="@string/nav_pay" />
    </group>
    <group
        android:id="@+id/nav_group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_theme"
            android:icon="@mipmap/ic_color_lens_black_24dp"
            android:title="@string/title_theme_store" />
        <item

            android:id="@+id/nav_app_wall"
            android:icon="@mipmap/ic_shop_black_24dp"
            android:title="@string/title_app_wall"
            android:visible="true" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>
    <!--android:checkable="true"-->
</menu>